--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
     "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "linebreak-style": "off",
     "eol-last": "off",
     "max-len": ["warn", { "code": 80 }],
