--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vibrant",
+  "name": "fq-resume",
   "version": "0.0.0",
   "author": {
-    "name": "David Sima",
-    "email": "hello@david-sima.dev",
-    "url": "https://github.com/The24thDS"
+    "name": "Felipe Queiroz",
+    "email": "felipeqmcorreia@gmail.com",
+    "url": "https://github.com/FelipeQueiroz"
   },
   "private": true,
   "license": "MIT",
@@ -27,9 +27,19 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/jetbrains-mono": "^4.5.12",
+    "@lottiefiles/react-lottie-player": "^3.5.2",
+    "@types/react-lottie": "^1.2.6",
+    "@types/styled-components": "^5.1.26",
     "framer-motion": "^8.5.2",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chrono": "^1.22.0",
+    "react-dom": "^18.2.0",
+    "react-in-viewport": "^1.0.0-alpha.29",
+    "react-lottie": "^1.2.3",
+    "react-scroll-fade-animation": "^0.5.4",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
